# todoc

./: CMakeLists.txt  main.cpp  main.qml
src/: main.cpp  resources.qrc
src/qml/: ARec.qml  ASwText.qml  main.qml
